# minjust_parser

./: .gitignore  pyproject.toml  requirements.txt
minjust_parser/: config.json  main.py  output.xlsx  settings.py
minjust_parser/models/: api.py  driver.py  excel_handler.py  locator.py  locators.py  logger.py  middleware.py  page.py  requester.py  requests_page.py
minjust_parser/models/drivers/: __init__.py  request.py  web.py
minjust_parser/models/page/: locators.py  request.py  web.py
minjust_parser/utils/: __init__.py  logger.py  url.py
